basic markup, btrsp grid and main blocks on index

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -1,3 +1,4 @@
+
 /*
 * Third Party
 */
@@ -6,4 +7,6 @@
 /*
 * Custom
 */
-@import "partials/app.styl";
+@import "partials/variables.styl";
+@import "partials/basic.styl";
+@import "partials/header.styl"
