--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,3 +1,61 @@
-<section class="header">
-    Header
-</section>
+</header>
+    <div class="row flex-lg-middle">
+        <div id="carousel-example-generic" class="carousel slide col-lg" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <img src="..." alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img src="..." alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img src="..." alt="Third slide">
+                </div>
+            </div>
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="icon-prev" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="icon-next" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div class="page-title">
+            <h1 class="page-title__main-title">Констракт-инжиниринг</h1>
+            <p class="page-title__description">Что-то про нас, кто мы такие и вообще решаем любые: инженерские и не
+                только задачи, особенно связанные с умными домами и видеонаблюдением
+            </p>
+            <a href="" class="page-title__more-info">Подробнее</a>
+        </div>
+    </div>
+    <div class="index-nav">
+        <ul class="index-nav__list row flex-lg-middle">
+            <li class="index-nav__item col-lg">
+                <h2 class="index-nav__title">Новости</h2>
+                <p class="index-nav__description">Что-то про новости</p>
+            </li>
+            <li class="index-nav__item col-lg">
+                <h2 class="index-nav__title">Каталог</h2>
+                <p class="index-nav__description">Что-то про каталог</p>
+            </li>
+            <li class="index-nav__item col-lg">
+                <h2 class="index-nav__title">Монтаж</h2>
+                <p class="index-nav__description">Что-то про монтаж</p>
+            </li>
+            <li class="index-nav__item col-lg">
+                <h2 class="index-nav__title">Контакты</h2>
+                <p class="index-nav__description">Что-то про контакты</p>
+            </li>
+            <li class="index-nav__item col-lg">
+                <h2 class="index-nav__title">Партнеры</h2>
+                <p class="index-nav__description">Что-то про партнеров</p>
+            </li>
+        </ul>
+    </div>
+</header>
