add fonts, new stylus files

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -7,6 +7,10 @@
 /*
 * Custom
 */
-@import "partials/variables.styl";
+@import "global/variables.styl";
+@import "global/fonts.styl";
+@import "global/mixins.styl";
+
 @import "partials/basic.styl";
-@import "partials/header.styl"
+@import "partials/nav.styl";
+@import "partials/header.styl";
