--- a/src/style/global/mixins.styl
+++ b/src/style/global/mixins.styl
@@ -1,2 +1,4 @@
-font(font-family, font-size, line-height)
-  font-family
+font(weight, size, lineheight)
+  font-weight weight
+  font-size size
+  line-height lineheight
