--- a/src/style/global/variables.styl
+++ b/src/style/global/variables.styl
@@ -2,4 +2,6 @@ bg-color = #2e2e30
 bg-color = #f2f1f1
 main-color = #38383a
 
-font-family = 
+flight = "robotolight", "Helvetica", sans-serif;
+fregular = "robotoregular", "Helvetica", sans-serif;
+fbold = "robotobold", "Helvetica", sans-serif;
