--- a/src/template/nav.html
+++ b/src/template/nav.html
@@ -2,18 +2,18 @@
     <a class="navbar-brand col-lg-1" href="#">
         <img src="/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="logo">
     </a>
-    <nav class="global-nav navbar navbar-dark bg-inverse bg-faded col-lg-6">
-        <ul class="nav navbar-nav">
-            <li class="nav-item active">
+    <nav class="global-nav navbar navbar-dark col-lg-6 col-lg flex-items-lg-middle">
+        <ul class="nav navbar-nav row flex-items-lg-middle">
+            <li class="nav-item active col-lg">
                 <a class="nav-link" href="#">Домой <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item col-lg">
                 <a class="nav-link" href="#">О нас</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item col-lg">
                 <a class="nav-link" href="#">Цены</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item col-lg">
                 <a class="nav-link" href="#">Партнерам</a>
             </li>
         </ul>
