styles for navbar

--- a/src/style/global/variables.styl
+++ b/src/style/global/variables.styl
@@ -1,6 +1,7 @@
 bg-color = #2e2e30
 bg-color = #f2f1f1
 main-color = #38383a
+secondary-color = #a5a5a5
 
 flight = "robotolight", "Helvetica", sans-serif;
 fregular = "robotoregular", "Helvetica", sans-serif;
