--- a/src/style/partials/nav.styl
+++ b/src/style/partials/nav.styl
@@ -2,7 +2,31 @@
   margin-bottom 32px
 
 .global-nav
-  height 66px
   background-color main-color
-  font(400, 13px, 26px)
+  height 66px
+  padding 0
+
+  color #ffffff
+
+.global-nav__items-list
+  display flex
+  color #ffffff
+
+.navbar-nav .nav-item+.nav-item
+  margin 0
+
+.navbar-nav .nav-link
+  padding-top 1.3rem
+  padding-bottom 1.3rem
+  text-align center
+  text-transform uppercase
+
+
+
+
+
+
+
+
+
 
