changed template for article on bottstrap markup, index-nav changed to bootstrap style

--- a/src/style/partials/nav.styl
+++ b/src/style/partials/nav.styl
@@ -15,7 +15,7 @@
 .navbar-nav .nav-item+.nav-item
   margin 0
 
-.navbar-nav .nav-link
+.global-nav__items-list.navbar-nav .nav-link
   padding-top 1.3rem
   padding-bottom 1.3rem
   text-align center
