--- a/src/template/header.html
+++ b/src/template/header.html
@@ -34,28 +34,52 @@
             <a href="" class="page-title__more-info">Подробнее</a>
         </div>
     </div>
-    <div class="index-nav">
-        <ul class="index-nav__list row flex-lg-middle">
-            <li class="index-nav__item col-lg">
-                <h2 class="index-nav__title">Новости</h2>
-                <p class="index-nav__description">Что-то про новости</p>
+    <div class="index-nav nav nav-pills">
+        <ul class="index-nav__list nav nav-pills row flex-lg-middle">
+            <li class="index-nav__item nav-item col-lg">
+                <a href="" class="nav-link active">
+                    <h2 class="index-nav__title">Новости</h2>
+                    <p class="index-nav__description">Что-то про новости</p>
+                </a>
             </li>
-            <li class="index-nav__item col-lg">
-                <h2 class="index-nav__title">Каталог</h2>
-                <p class="index-nav__description">Что-то про каталог</p>
+            <li class="index-nav__item nav-item col-lg">
+                <a href="" class="nav-link">
+                    <h2 class="index-nav__title">Каталог</h2>
+                    <p class="index-nav__description">Что-то про каталог</p>
+                </a>
             </li>
-            <li class="index-nav__item col-lg">
-                <h2 class="index-nav__title">Монтаж</h2>
-                <p class="index-nav__description">Что-то про монтаж</p>
+            <li class="index-nav__item nav-item col-lg">
+                <a href="" class="nav-link">
+                    <h2 class="index-nav__title">Монтаж</h2>
+                    <p class="index-nav__description">Что-то про монтаж</p>
+                </a>
             </li>
-            <li class="index-nav__item col-lg">
-                <h2 class="index-nav__title">Контакты</h2>
-                <p class="index-nav__description">Что-то про контакты</p>
+            <li class="index-nav__item nav-item col-lg">
+                <a href="" class="nav-link">
+                    <h2 class="index-nav__title">Контакты</h2>
+                    <p class="index-nav__description">Что-то про контакты</p>
+                </a>
             </li>
-            <li class="index-nav__item col-lg">
-                <h2 class="index-nav__title">Партнеры</h2>
-                <p class="index-nav__description">Что-то про партнеров</p>
+            <li class="index-nav__item nav-item col-lg">
+                <a href="" class="nav-link">
+                    <h2 class="index-nav__title">Партнеры</h2>
+                    <p class="index-nav__description">Что-то про партнеров</p>
+                </a>
             </li>
         </ul>
     </div>
+    <!--<ul class="nav nav-pills">-->
+        <!--<li class="nav-item">-->
+            <!--<a class="nav-link active" href="#">Active</a>-->
+        <!--</li>-->
+        <!--<li class="nav-item">-->
+            <!--<a class="nav-link" href="#">Link</a>-->
+        <!--</li>-->
+        <!--<li class="nav-item">-->
+            <!--<a class="nav-link" href="#">Link</a>-->
+        <!--</li>-->
+        <!--<li class="nav-item">-->
+            <!--<a class="nav-link disabled" href="#">Disabled</a>-->
+        <!--</li>-->
+    <!--</ul>-->
 </header>
