page-title positioned, index-nav - styled, items - grid

--- a/src/style/global/variables.styl
+++ b/src/style/global/variables.styl
@@ -1,7 +1,9 @@
 bg-color = #2e2e30
-bg-color = #f2f1f1
+//bg-color = #f2f1f1
 main-color = #38383a
 secondary-color = #a5a5a5
+primary-active = #0275d8
+links-hover = lighten(primary-active, 80%)
 
 flight = "robotolight", "Helvetica", sans-serif;
 fregular = "robotoregular", "Helvetica", sans-serif;
