--- a/src/style/partials/header.styl
+++ b/src/style/partials/header.styl
@@ -1,2 +1,30 @@
+.index-header
+  position relative
+  margin-bottom 32px
+
 #carousel-example-generic
   height: 500px
+
+.page-header__page-title
+  position absolute
+  top 250px
+
+.page-header__index-nav-item
+  padding 0
+
+.nav-pills .nav-item+.nav-item
+  margin 0
+
+.nav-pills .nav-link
+  height 132px
+  border-radius 0
+  background-color #ffffff
+
+  color main-color
+
+  &:hover
+    background-color secondary-color
+
+.nav-pills .nav-link.active
+  background-color primary-active
+
