--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,4 +1,4 @@
-</header>
+<header class="index-header">
     <div class="row flex-lg-middle">
         <div id="carousel-example-generic" class="carousel slide col-lg" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -26,7 +26,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <div class="page-title">
+        <div class="page-header__page-title col-lg-8 offset-lg-2">
             <h1 class="page-title__main-title">Констракт-инжиниринг</h1>
             <p class="page-title__description">Что-то про нас, кто мы такие и вообще решаем любые: инженерские и не
                 только задачи, особенно связанные с умными домами и видеонаблюдением
@@ -34,33 +34,33 @@
             <a href="" class="page-title__more-info">Подробнее</a>
         </div>
     </div>
-    <div class="index-nav nav nav-pills">
-        <ul class="index-nav__list nav nav-pills row flex-lg-middle">
-            <li class="index-nav__item nav-item col-lg">
+    <div class="page-header__index-nav nav nav-pills">
+        <ul class="page-header_index-nav-list nav nav-pills row flex-lg-middle">
+            <li class="page-header__index-nav-item nav-item col-lg">
                 <a href="" class="nav-link active">
                     <h2 class="index-nav__title">Новости</h2>
                     <p class="index-nav__description">Что-то про новости</p>
                 </a>
             </li>
-            <li class="index-nav__item nav-item col-lg">
+            <li class="page-header__index-nav-item nav-item col-lg">
                 <a href="" class="nav-link">
                     <h2 class="index-nav__title">Каталог</h2>
                     <p class="index-nav__description">Что-то про каталог</p>
                 </a>
             </li>
-            <li class="index-nav__item nav-item col-lg">
+            <li class="page-header__index-nav-item nav-item col-lg">
                 <a href="" class="nav-link">
                     <h2 class="index-nav__title">Монтаж</h2>
                     <p class="index-nav__description">Что-то про монтаж</p>
                 </a>
             </li>
-            <li class="index-nav__item nav-item col-lg">
+            <li class="page-header__index-nav-item nav-item col-lg">
                 <a href="" class="nav-link">
                     <h2 class="index-nav__title">Контакты</h2>
                     <p class="index-nav__description">Что-то про контакты</p>
                 </a>
             </li>
-            <li class="index-nav__item nav-item col-lg">
+            <li class="page-header__index-nav-item nav-item col-lg">
                 <a href="" class="nav-link">
                     <h2 class="index-nav__title">Партнеры</h2>
                     <p class="index-nav__description">Что-то про партнеров</p>
@@ -68,18 +68,4 @@
             </li>
         </ul>
     </div>
-    <!--<ul class="nav nav-pills">-->
-        <!--<li class="nav-item">-->
-            <!--<a class="nav-link active" href="#">Active</a>-->
-        <!--</li>-->
-        <!--<li class="nav-item">-->
-            <!--<a class="nav-link" href="#">Link</a>-->
-        <!--</li>-->
-        <!--<li class="nav-item">-->
-            <!--<a class="nav-link" href="#">Link</a>-->
-        <!--</li>-->
-        <!--<li class="nav-item">-->
-            <!--<a class="nav-link disabled" href="#">Disabled</a>-->
-        <!--</li>-->
-    <!--</ul>-->
 </header>
