--- a/src/template/article-item-template.html
+++ b/src/template/article-item-template.html
@@ -1,6 +1,6 @@
 <script id="article-item-template" type="text/x-handlebars-template">
     {{#each articles}}
-    <article class="card col-lg-4">
+    <article class="card {{ifWide @index}}">
         <img class="card-img-top" src="{{src}}" alt="Card image cap">
         <div class="card-block">
             <h4 class="card-title">{{title}}</h4>
