content block width fix

--- a/src/style/partials/content.styl
+++ b/src/style/partials/content.styl
@@ -1,12 +1,11 @@
 .inside
-  width 100%
   justify-content space-between
-  padding 0
+  //padding 0
 
 .card
   height 415px
   flex-basis 32%
-  margin-bottom 33px
+  margin-bottom 32px
   box-sizing border-box
 
 .content__card--small
