wide-items order

--- a/src/style/partials/content.styl
+++ b/src/style/partials/content.styl
@@ -14,6 +14,12 @@
 
 
 .content__card--wide
+  display flex
+  flex-direction row-reverse
+  justify-content space-between
   flex-basis 66%
   margin-right 0
+
+  img
+    width 37.5%
 
