--- a/src/template/header.html
+++ b/src/template/header.html
@@ -26,7 +26,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <div class="page-header__page-title col-lg-8 offset-lg-2">
+        <div class="page-header__page-title col-md-8 offset-md-2 col-lg-8 offset-lg-2">
             <h1 class="page-title__main-title">Констракт-инжиниринг</h1>
             <p class="page-title__description">Что-то про нас, кто мы такие и вообще решаем любые: инженерские и не
                 только задачи, особенно связанные с умными домами и видеонаблюдением
@@ -36,31 +36,25 @@
     </div>
     <div class="page-header__index-nav nav nav-pills">
         <ul class="page-header_index-nav-list nav nav-pills row flex-lg-middle">
-            <li class="page-header__index-nav-item nav-item col-lg">
-                <a href="" class="nav-link active">
-                    <h2 class="index-nav__title">Новости</h2>
-                    <p class="index-nav__description">Что-то про новости</p>
-                </a>
-            </li>
-            <li class="page-header__index-nav-item nav-item col-lg">
+            <li class="page-header__index-nav-item nav-item col-md col-lg">
                 <a href="" class="nav-link">
                     <h2 class="index-nav__title">Каталог</h2>
                     <p class="index-nav__description">Что-то про каталог</p>
                 </a>
             </li>
-            <li class="page-header__index-nav-item nav-item col-lg">
+            <li class="page-header__index-nav-item nav-item col-md col-lg">
                 <a href="" class="nav-link">
                     <h2 class="index-nav__title">Монтаж</h2>
                     <p class="index-nav__description">Что-то про монтаж</p>
                 </a>
             </li>
-            <li class="page-header__index-nav-item nav-item col-lg">
-                <a href="" class="nav-link">
-                    <h2 class="index-nav__title">Контакты</h2>
-                    <p class="index-nav__description">Что-то про контакты</p>
+            <li class="page-header__index-nav-item nav-item col-md col-lg">
+                <a href="" class="nav-link active">
+                    <h2 class="index-nav__title">Новости</h2>
+                    <p class="index-nav__description">Что-то про новости</p>
                 </a>
             </li>
-            <li class="page-header__index-nav-item nav-item col-lg">
+            <li class="page-header__index-nav-item nav-item col-md col-lg">
                 <a href="" class="nav-link">
                     <h2 class="index-nav__title">Партнеры</h2>
                     <p class="index-nav__description">Что-то про партнеров</p>
