--- a/src/template/nav.html
+++ b/src/template/nav.html
@@ -1,8 +1,8 @@
 <div class="row flex-lg-middle flex-items-lg-between nav-wrapper">
-    <a class="navbar-brand col-lg-1" href="#">
+    <a class="navbar-brand col-md-2 col-lg-1" href="#">
         <img src="/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="logo">
     </a>
-    <nav class="global-nav navbar navbar-dark bg-faded col-lg-6">
+    <nav class="global-nav navbar navbar-dark bg-faded col-md-8 col-lg-6">
         <div class="global-nav__items-list nav navbar-nav">
             <a class="global-nav__item col-lg nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             <a class="global-nav__item col-lg nav-item nav-link" href="#">Features</a>
