--- a/src/style/partials/content.styl
+++ b/src/style/partials/content.styl
@@ -1,20 +1,65 @@
+.inside
+  flex-direction column
+
+.card
+  position relative
+  display flex
+  margin-bottom 0
+  min-height 150px
+
+  border-radius 0
+
+  img
+    width 30%
+
+  .card-block
+    flex-basis 70%
+    flex-grow 0
+
+    .btn
+      display none
+
+@media (min-width: 544px)
+  .card
+    flex-grow 1
+    display flex
+    height 25%
+    margin-bottom 3%
+
+    img
+      flex-basis 25%
+
+    .card-block
+      flex-basis 75%
+
+      .btn
+        display block
+        width 100%
+
 @media (min-width: 768px)
   .inside
+    flex-direction row
     justify-content space-between
 
   .card
+    display block
     height 315px
+    flex-grow 0
     flex-basis 49%
     margin-bottom 3%
 
+    border-radius 4px
+
+    img
+      flex-basis auto
+      width 100%
+
+    .card-block .btn
+      display inline-block
+      width auto
+
   .content__card--last-line
     flex-grow 1
-
-  //.content__card--small
-
-
-  //.content__card--wide
-  //  flex-basis 100%
 
 @media (min-width: 992px)
   .card
@@ -23,7 +68,7 @@
     box-sizing border-box
 
   .content__card--small
-    &:nth-of-type(5)
+    &:nth-of-type(5n)
       margin-right 0
 
 
