bootstrap native flex grid with gutters for content items

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -15,3 +15,4 @@
 @import "partials/nav.styl";
 @import "partials/header.styl";
 @import "partials/content.styl";
+//@import "partials/footer.styl";
