--- a/src/template/article-item-template.html
+++ b/src/template/article-item-template.html
@@ -1,12 +1,14 @@
 <script id="article-item-template" type="text/x-handlebars-template">
     {{#each articles}}
-    <article class="card {{ifWide @index ../articles}}">
-        <img class="card-img-top" src="{{src}}" alt="Card image cap">
-        <div class="card-block">
-            <h4 class="card-title">{{title}}</h4>
-            <p class="card-text">{{description}}</p>
-            <a href="#" class="btn btn-primary">Подробнее</a>
-        </div>
-    </article>
+    <div class="col-lg-{{col-width @index}}">
+        <article class="card">
+            <img class="card-img-top" src="{{src}}" alt="Card image cap">
+            <div class="card-block">
+                <h4 class="card-title">{{title}}</h4>
+                <p class="card-text">{{description}}</p>
+                <a href="#" class="btn btn-primary">Подробнее</a>
+            </div>
+        </article>
+    </div>
     {{/each}}
 </script>
