--- a/src/style/partials/header.styl
+++ b/src/style/partials/header.styl
@@ -1,30 +1,41 @@
-.index-header
-  position relative
-  margin-bottom 32px
 
-#carousel-example-generic
-  height: 500px
+  .index-header
+    position relative
+    margin-bottom 32px
 
-.page-header__page-title
-  position absolute
-  top 250px
+  #carousel-example-generic
+    height: 500px
 
-.page-header__index-nav-item
-  padding 0
+  .page-header__page-title
+    color: secondary-color
+    padding-bottom 20px
 
-.nav-pills .nav-item+.nav-item
-  margin 0
+    .button-wrapper
+      text-align right
 
-.nav-pills .nav-link
-  height 132px
-  border-radius 0
-  background-color #ffffff
+  .page-header__index-nav-item
+    padding 0
 
-  color main-color
+  .nav-pills .nav-item+.nav-item
+    margin 0
 
-  &:hover
-    background-color secondary-color
+  .nav-pills .nav-link
+    height 132px
+    padding-top 1.33em
+    padding-bottom 1.33em
+    border-radius 0
+    background-color #ffffff
 
-.nav-pills .nav-link.active
-  background-color primary-active
+    text-align center
+    color main-color
 
+    &:hover
+      background-color secondary-color
+
+  .nav-pills .nav-link.active
+    background-color primary-active
+
+@media (min-width: 1200px)
+  .page-header__page-title
+    position absolute
+    top 250px
