--- a/src/template/header.html
+++ b/src/template/header.html
@@ -31,7 +31,9 @@
             <p class="page-title__description">Что-то про нас, кто мы такие и вообще решаем любые: инженерские и не
                 только задачи, особенно связанные с умными домами и видеонаблюдением
             </p>
-            <a href="" class="page-title__more-info">Подробнее</a>
+            <div class="button-wrapper">
+                <button type="button" class="btn btn-secondary">Подробнее</button>
+            </div>
         </div>
     </div>
     <div class="page-header__index-nav nav nav-pills">
