responsive grid for tablet - desktop

--- a/src/style/partials/content.styl
+++ b/src/style/partials/content.styl
@@ -2,7 +2,11 @@ article.card
   margin 0 -15px
   border-radius 0
 
-@media (min-width: 1200px)
+  @media (min-width: 768px)
+    margin 0
+    border-radius 4px
+
+@media (min-width: 768px)
   .container.no-padding
     padding 0
 
