--- a/src/style/partials/header.styl
+++ b/src/style/partials/header.styl
@@ -13,6 +13,9 @@
     .button-wrapper
       text-align right
 
+      @media (min-width: 768px)
+        text-align left
+
   .page-header__index-nav-item
     padding 0
 
@@ -35,7 +38,7 @@
   .nav-pills .nav-link.active
     background-color primary-active
 
-@media (min-width: 1200px)
+@media (min-width: 768px)
   .page-header__page-title
     position absolute
     top 250px
