--- a/src/template/nav.html
+++ b/src/template/nav.html
@@ -1,4 +1,4 @@
-<div class="row flex-lg-middle flex-items-lg-between nav-wrapper">
+<div class="row flex-md-middle flex-items-md-between nav-wrapper">
         <a class="navbar-brand col-md-2 col-lg-1" href="#">
             <img src="/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="logo">
         </a>
