no-sense changes for bootstrap customizer

--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,3 +1,5 @@
-<footer class="footer">
-    <p>Какой-то текст в футере</p>
+<footer class="row">
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4"></div>
 </footer>
