new template, removed main.html

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -8,7 +8,7 @@
 * Custom
 */
 @import "global/variables.styl";
-@import "global/fonts.styl";
+//@import "global/fonts.styl";
 @import "global/mixins.styl";
 
 @import "partials/basic.styl";
