--- a/src/template/index-articles-template.html
+++ b/src/template/index-articles-template.html
@@ -1,4 +1,4 @@
-<script id="article-item-template" type="text/x-handlebars-template">
+<script id="index-articles-template" type="text/x-handlebars-template">
     {{#each articles}}
     <div class="col-lg-{{col-width @index}}">
         <article class="card">
