prototype for view toggling through json

--- a/src/template/nav.html
+++ b/src/template/nav.html
@@ -9,7 +9,7 @@
                 <a class="global-nav__item col-lg nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 <a class="global-nav__item col-lg nav-item nav-link" href="#">Features</a>
                 <a class="global-nav__item col-lg nav-item nav-link" href="#">Pricing</a>
-                <a class="global-nav__item col-lg nav-item nav-link" href="#">About</a>
+                <a class="global-nav__item global-nav__item--about col-lg nav-item nav-link" href="#">About</a>
             </div>
         </div>
     </nav>
