--- a/src/template/about-template.html
+++ b/src/template/about-template.html
@@ -1,5 +1,5 @@
 <script id="about-template" type="text/x-handlebars-template">
-    {{#each feature}}
+    {{#each features}}
         <div class="col-md-4 features">
             <span class="fa fa-{{iconClass}}"></span>
             <h3 class="features__title">{{title}}</h3>
