stash returned nav, header, images, jumbotron, content position

--- a/src/style/partials/basic.styl
+++ b/src/style/partials/basic.styl
@@ -2,5 +2,8 @@ body
   background-color bg-color
   padding-top 32px
 
-//.container
-//  padding 0
+.no-container-padding
+  margin 0 -15px
+
+.no-border-radius
+  border-radius 0
