--- a/src/style/partials/nav.styl
+++ b/src/style/partials/nav.styl
@@ -15,6 +15,10 @@
   @media (min-width: 768px)
     margin 0
 
+.navbar-brand .logo-text
+  margin 0
+  font-size 30px
+
 .navbar-toggler
   display inline-block
 
@@ -44,6 +48,10 @@
     height 66px
     padding 0
 
+    .collapse,
+    .navbar-nav
+      height inherit
+
     color #ffffff
 
   .navbar-brand
@@ -57,8 +65,9 @@
     margin 0
 
   .global-nav__items-list.navbar-nav .nav-link
-    padding-top 1.3rem
-    padding-bottom 1.3rem
+    height inherit
+    padding-top 1.5rem
+    padding-bottom 1.5rem
     text-align center
     text-transform uppercase
 
