--- a/src/template/index-articles-template.html
+++ b/src/template/index-articles-template.html
@@ -1,12 +1,12 @@
 <script id="index-articles-template" type="text/x-handlebars-template">
     {{#each articles}}
     <div class="col-lg-{{col-width @index}}">
-        <article class="card">
+        <article class="card align-items-start">
             <img class="card-img-top" src="{{src}}" alt="Card image cap">
             <div class="card-block">
                 <h4 class="card-title">{{title}}</h4>
-                <p class="card-text">{{description}}</p>
-                <a href="#" class="btn btn-primary">Подробнее</a>
+                <!--<p class="card-text">{{description}}</p>-->
+                <!--<a href="#" class="btn btn-primary">Подробнее</a>-->
             </div>
         </article>
     </div>
