--- a/src/style/partials/content.styl
+++ b/src/style/partials/content.styl
@@ -16,3 +16,8 @@ article.card
 
     article
       flex-grow 1
+
+  .inside .col-lg-8 .card
+    display flex
+    flex-direction row-reverse
+    align-items center
