--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,6 +1,19 @@
 <header class="index-header">
+    <!--<div class="row">-->
+        <div class="page-header__page-title jumbotron no-container-padding no-border-radius">
+            <h1 class="page-title__main-title">Корпорация безопасности - ЮГ</h1>
+            <p class="page-title__description">Системы видеобнаблюдения, обеспечения безопасности, пожарно-охранные сигнализации,
+                комплексные решения для умного дома, сетевое оборудование. Продажа, монтаж, установка, ввод в эксплуатацию,
+                поддержка существующих систем видеомониторинга и охраны, интеграция новых систем, модернизация. Техническое
+                обслуживание. Боогатый выбор сорменной техники от официальный поставщиков и дистрибьюторов на территории РФ.
+            </p>
+            <div class="button-wrapper">
+                <button type="button" class="btn btn-secondary">Подробнее</button>
+            </div>
+        </div>
+    <!--</div>-->
     <div class="row flex-lg-middle">
-        <div id="carousel-example-generic" class="carousel slide col-lg" data-ride="carousel">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
@@ -8,13 +21,25 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img src="..." alt="First slide">
+                    <img src="img/bunner/video-bunner.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Системы видеонаблюдения</h3>
+                        <!--<p>Внедрение, масштабирование</p>-->
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="..." alt="Second slide">
+                    <img src="img/bunner/hd-bunner.jpg" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Сетевое оборудование</h3>
+                        <!--<p>Поставка, подключение, сервис</p>-->
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="..." alt="Third slide">
+                    <img src="img/bunner/video-bunner-2.jpg" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Пожарно-охранные сигнализации</h3>
+                        <!--<p>Установка, монтаж, обслуживание</p>-->
+                    </div>
                 </div>
             </div>
             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -26,15 +51,7 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <div class="page-header__page-title col-md-8 offset-md-2 col-lg-8 offset-lg-2">
-            <h1 class="page-title__main-title">Констракт-инжиниринг</h1>
-            <p class="page-title__description">Что-то про нас, кто мы такие и вообще решаем любые: инженерские и не
-                только задачи, особенно связанные с умными домами и видеонаблюдением
-            </p>
-            <div class="button-wrapper">
-                <button type="button" class="btn btn-secondary">Подробнее</button>
-            </div>
-        </div>
+
     </div>
     <div class="page-header__index-nav nav nav-pills">
         <ul class="page-header_index-nav-list nav nav-pills row flex-lg-middle">
