--- a/src/template/nav.html
+++ b/src/template/nav.html
@@ -7,9 +7,9 @@
         <button class="navbar-toggler navbar-toggleable-sm hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar" aria-controls="exCollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation"></button>
         <div class="collapse navbar-toggleable-sm" id="exCollapsingNavbar">
             <div class="global-nav__items-list nav navbar-nav ">
-                <a class="global-nav__item col-lg nav-item nav-link active" href="#">Главная<span class="sr-only">(current)</span></a>
-                <a class="global-nav__item col-lg nav-item nav-link" href="#">Преимущества</a>
-                <a class="global-nav__item col-lg nav-item nav-link" href="#">Контакты</a>
+                <a class="global-nav__item global-nav__item--main col-lg nav-item nav-link active" href="#">Главная<span class="sr-only">(current)</span></a>
+                <a class="global-nav__item global-nav__item--features col-lg nav-item nav-link" href="#">Преимущества</a>
+                <a class="global-nav__item global-nav__item--contacts col-lg nav-item nav-link" href="#">Контакты</a>
                 <a class="global-nav__item global-nav__item--about col-lg nav-item nav-link" href="#">О нас</a>
             </div>
         </div>
