smart-home img, brand-bunners

--- a/src/template/nav.html
+++ b/src/template/nav.html
@@ -1,7 +1,7 @@
 <div class="row flex-md-middle flex-items-md-between nav-wrapper">
          <div class="col-md-4 col-lg-4">
             <!--<img src="/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="logo">-->
-             <a class="navbar-brand" href="#"> <p class="logo-text">КБ - ЮГ</p> </a>
+             <a class="navbar-brand" href="index.html"> <p class="logo-text">КБ - ЮГ</p> </a>
          </div>
     <nav class="global-nav navbar navbar-dark bg-faded col-md-8 col-lg-6">
         <button class="navbar-toggler navbar-toggleable-sm hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar" aria-controls="exCollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation"></button>
