--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -15,4 +15,5 @@
 @import "partials/nav.styl";
 @import "partials/header.styl";
 @import "partials/content.styl";
+@import "partials/features.styl";
 //@import "partials/footer.styl";
