--- a/src/template/header.html
+++ b/src/template/header.html
@@ -35,9 +35,9 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/bunner/video-bunner-2.jpg" alt="Second slide">
+                    <img src="img/bunner/smart-home-bunner.jpg" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
-                        <h3>Пожарно-охранные сигнализации</h3>
+                        <h3>Системы &laquo;Умный дом&raquo;</h3>
                         <!--<p>Установка, монтаж, обслуживание</p>-->
                     </div>
                 </div>
