--- a/src/template/header.html
+++ b/src/template/header.html
@@ -5,7 +5,7 @@
             <p class="page-title__description">Системы видеобнаблюдения, обеспечения безопасности, пожарно-охранные сигнализации,
                 комплексные решения для умного дома, сетевое оборудование. Продажа, монтаж, установка, ввод в эксплуатацию,
                 поддержка существующих систем видеомониторинга и охраны, интеграция новых систем, модернизация. Техническое
-                обслуживание. Боогатый выбор сорменной техники от официальный поставщиков и дистрибьюторов на территории РФ.
+                обслуживание. Богатый выбор соврменной техники от официальных поставщиков и дистрибьюторов на территории РФ.
             </p>
             <div class="button-wrapper">
                 <button type="button" class="btn btn-secondary">Подробнее</button>
