responsive adaptive index page

--- a/src/template/features-template.html
+++ b/src/template/features-template.html
@@ -3,7 +3,7 @@
         <div class="row">
             {{#each features}}
             <div class="col-md-4 features__item">
-                <div class="text-md-center features__icon-wrapper">
+                <div class="text-xs-center features__icon-wrapper">
                     <i class="fa fa-{{iconClass}} fa-3x"></i>
                 </div>
                 <h3 class="features__title text-xs-center">{{title}}</h3>
