--- a/src/style/partials/content.styl
+++ b/src/style/partials/content.styl
@@ -2,22 +2,63 @@ article.card
   margin 0 -15px
   border-radius 0
 
-  @media (min-width: 768px)
-    margin 0
-    border-radius 4px
+.inside .article__card
+  &--wide article
+    display flex
+    flex-direction row
+    align-items center
+  &--normal article
+    display flex
+    flex-direction row
+    align-items center
+
+picture
+  flex-basis 25%
+
+.card-title
+  font-size 16px
+
+@media (min-width: 576px)
+  picture
+    flex-basis auto
+    flex-shrink 0
+
+  .card-title
+    font-size 22px
 
 @media (min-width: 768px)
   .container.no-padding
     padding 0
 
-  .inside.row-eq-height > [class*='col-lg']
+  article.card
+    margin 0
+    border-radius 4px
+
+  .inside.row-eq-height > [class*='article__card']
     display flex
     margin-bottom 30px
 
     article
       flex-grow 1
 
-  .inside .col-lg-8 .card
-    display flex
-    flex-direction row-reverse
-    align-items center
+  .inside .article__card
+    &--wide article
+      flex-direction column
+      align-items center
+    &--normal article
+      flex-direction column
+      align-items center
+
+  picture
+    flex-shrink 1
+
+  .card-title
+    font-size 1.5rem
+
+@media (min-width: 992px)
+  .inside .article__card
+    &--wide article
+      flex-direction row-reverse
+    &--normal article
+      flex-direction column
+      align-items stretch
