switch to one page render

--- a/src/style/partials/features.styl
+++ b/src/style/partials/features.styl
@@ -5,9 +5,9 @@
 features__icon-wrapper
   margin-bottom 15px;
 
-.features__brand-title
-  background-color bg-color
-  color: white;
+//.features__brand-title
+//  background-color bg-color
+//  color: white;
 
 .features__brand-wrapper
   background-color white;
