--- a/src/style/partials/footer.styl
+++ b/src/style/partials/footer.styl
@@ -1,6 +1,17 @@
-footer div
-  height 100px;
-  background-color #00b3ee
+.main-footer
+  margin-top 30px;
+  color white
+
+.site-map
+  padding-left 0;
+  list-style none
+
+.call
+  padding-top 30px
+
+.footer-call
+  font-size 20px
+
 
 
 
