--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,5 +1,40 @@
-<footer class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
+<footer class="container main-footer bg-inverse">
+        <div class="row">
+            <div class="col-sm-5 d-flex flex-column justify-content-center">
+                <div class="footer-agreement">
+                    <a href="/"><img src=""></a>
+                    <p>© ООО Корпорация безопасности 2017 <br>
+                        Все права защищены<br>
+                        Не является публичной офертой<br>
+                        <a href="#" data-toggle="modal" data-target="#policy">Политика конфиденциальности</a><br>
+                        <a href="#" data-toggle="modal" data-target="#personal">Согласие на сбор и обработку персональных данных</a>
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-3 d-flex flex-column justify-content-center menu">
+                <h3>Карта сайта</h3>
+                <ul class="site-map">
+                    <li>
+                        <a href="/fc_projects">Каталог</a>
+                    </li>
+                    <li>
+                        <a href="/services">Преимущества</a>
+                    </li>
+                    <li>
+                        <a href="/aboutus">О компании</a>
+                    </li>
+                    <li>
+                        <a href="/contactus">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-3 d-flex justify-content-center">
+                <div class="call d-flex text-sm-center">
+                    <a class="footer-call" href="tel:+79281800018">+79281800018</a>
+                    <a href="#" data-toggle="modal" data-target="#call" class="button-clear">
+                        <span class="btn btn-primary">Заказать звонок</span>
+                    </a>
+                </div>
+            </div>
+        </div>
 </footer>
