--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -16,4 +16,4 @@
 @import "partials/header.styl";
 @import "partials/content.styl";
 @import "partials/features.styl";
-//@import "partials/footer.styl";
+@import "partials/footer.styl";
