--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -30,7 +30,7 @@
             </div>
             <div class="col-sm-3 d-flex justify-content-center">
                 <div class="call d-flex text-sm-center">
-                    <a class="footer-call" href="tel:+79281800018">+79281800018</a>
+                    <a class="footer-call" href="tel:+78632491794">+7(863) 249-17-94</a>
                     <a href="#" data-toggle="modal" data-target="#call" class="button-clear">
                         <span class="btn btn-primary">Заказать звонок</span>
                     </a>
